Added ZMove names as a argument type for the ZMove command